# api/openapi-spec/swagger.json
@@ -265,6 +265,63 @@
         }
       }
     },
+    "kruise.apps.v1alpha1.RolloutControl": {
+      "description": "RolloutControl is the Schema for the rolloutcontrols API",
+      "type": "object",
+      "properties": {
+        "apiVersion": {
+          "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources",
+          "type": "string"
+        },
+        "kind": {
+          "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds",
+          "type": "string"
+        },
+        "metadata": {
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ObjectMeta"
+        },
+        "spec": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutControlSpec"
+        },
+        "status": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutControlStatus"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.RolloutControlList": {
+      "description": "RolloutControlList contains a list of RolloutControl",
+      "type": "object",
+      "required": [
+        "items"
+      ],
+      "properties": {
+        "apiVersion": {
+          "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources",
+          "type": "string"
+        },
+        "items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutControl"
+          }
+        },
+        "kind": {
+          "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds",
+          "type": "string"
+        },
+        "metadata": {
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ListMeta"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.RolloutControlSpec": {
+      "description": "RolloutControlSpec defines the desired state of RolloutControl",
+      "type": "object"
+    },
+    "kruise.apps.v1alpha1.RolloutControlStatus": {
+      "description": "RolloutControlStatus defines the observed state of RolloutControl",
+      "type": "object"
+    },
     "kruise.apps.v1alpha1.RolloutDefinition": {
       "description": "RolloutDefinition is the Schema for the rolloutdefinitions API",
       "type": "object",
